--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "",
   "version": "0.0.0",
   "devDependencies": {
-    "bower": "*",
+    "bower": "",
 	"grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-cache-breaker": "^2.0.1",
